--- a/products.html
+++ b/products.html
@@ -138,7 +138,98 @@
 
         </div>
 
+        <div id="bottom_box_main">
+            <diV id="bottom_box">
+                <div id="bottom_box_head">Customer Service</div>
+                <div id="bottom_box_head">About Us</div>
+                <div id="bottom_box_head">Stores & Services</div>
+                <div id="bottom_box_head">Nordstrom Card & Rewards</div>
+                <div id="bottom_box_head">Nordstrom, Inc.</div>
+                <div>Get our apps</div>
 
+                <div>Contact Us</div>
+                <div>Careers</div>
+                <div>Find a Store </div>
+                <div>The Nordy Club Rewards</div>
+                <div>Nordstrom Rack</div>
+                <div></div>
+
+                <div>Order Status</div>
+                <div>Corporate Social Responsibility</div>
+                <div>Free Style Help</div>
+                <div>Pay My Bill</div>
+                <div>Nordstrom Canada</div>
+                <div></div>
+
+                <div>Shipping</div>
+                <div>Diversity, Inclusion & Belonging</div>
+                <div>Alterations & Tailoring</div>
+                <div>Manage My Nordstrom Card</div>
+                <div>Trunk Club</div>
+                <div></div>
+
+                <div>Return Policy & Exchanges</div>
+                <div>Investor Relations</div>
+                <div>Trunk Club</div>
+                <div></div>
+                <div></div>
+                <div></div>
+
+                <div>Price Adjustments</div>
+                <div>Press Releases</div>
+                <div>Pop-In Shop</div>
+                <div></div>
+                <div></div>
+                <div></div>
+
+                <div>Gift Cards</div>
+                <div>Get Email Updates</div>
+                <div>Virtual Events</div>
+                <div></div>
+                <div></div>
+                <div></div>
+
+                <div>FAQ</div>
+                <div>Nordstrom Blog</div>
+                <div>Spa Nordstrom</div>
+                <div></div>
+                <div></div>
+                <div></div>
+
+                <div>Product Recalls</div>
+                <div></div>
+                <div>Nordstrom Restaurants</div>
+                <div></div>
+                <div></div>
+                <div></div>
+
+                <div>
+                    <div class="bottom_box_ind_flag"><img src="https://n.nordstrommedia.com/alias/IN.gif" alt=""></div>
+                    &nbsp&nbsp<div class="bottom_box_ind_text">India</div>
+                </div>
+                <div></div>
+                <div>Nordstrom Local</div>
+                <div></div>
+                <div></div>
+                <div></div>
+
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+
+                <div>Your Privacy Rights</div>
+                <div>Do Not Sell My Info</div>
+                <div>Terms & Conditions</div>
+                <div>Interest-Based Ads</div>
+                <div>©2021 Nordstrom, Inc.</div>
+                <div></div>
+
+            </diV>
+
+        </div>
 
     </div>
 
