--- a/checkout.html
+++ b/checkout.html
@@ -21,6 +21,89 @@
   <div id="container">
 
 
+    <div id="box1">
+      <div class="checkout">
+        <i class="fas fa-lock"></i>
+        <h3>Secure checkout <sub>powered by Borderfree</sub> </h3>
+        <p class="descrip">Already have a Borderfree account? Click here. ?</p>
+
+      </div>
+      <div class="form">
+        <span>1</span>
+        <span>Delivery</span>
+        <form>
+          <input type="email" placeholder="Email" class="email"></br>
+          <input type="text" placeholder="First Name" class="firstname">
+          <input type="text" placeholder="Last Name" class="lastname"></br>
+          <input type="text " placeholder="Address" class="address"></br>
+          <input type="text" placeholder="address2(Optional)" class="address2">
+          <input type="text" placeholder=" PostalCode" class="PostalCode"></br>
+          <input type="text" placeholder="City" class="city">
+          <input type="text" placeholder="Region" class="region"></br>
+          <input type="number" placeholder="Phone" class="phone">
+          <span class="country_select">
+            <select name="location" id="india">
+              <option value="india">India</option>
+              <option value="Usa">USA</option>
+              <option value="United_Kindom">United_Kindom</option>
+              <option value="Russia">Russia</option>
+              <option value="Germany">Germany</option>
+              <option value="Scotland">Scotland</option>
+            </select>
+          </span>
+        </form>
+        <div class="table">
+          <table>
+            <thead>
+              <tr>
+                <th>Delivery Method</th>
+                <th>Estimated Arrival</th>
+                <th>Shipping Cost</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>
+                  Standard </br>
+                  No additional import charges at delivery</td>
+                <td>11–21 business days</td>
+                <td>(INR) ₹2,469</td>
+
+              </tr>
+              <tr>
+                <td>Standard</br>
+                  Import charges collected upon deliver</td>
+                <td>11–21 business days</td>
+                <td>(INR) ₹2,469</td>
+              </tr>
+              <tr>
+                <td>Express</br>
+                  No additional import charges at delivery</td>
+                <td>11–16 business days</td>
+                <td>(INR) ₹2,734</td>
+              </tr>
+              <tr>
+                <td>Express</br>
+                  Import charges collected upon delivery</td>
+                <td>11–16 business days</td>
+                <td>(INR) ₹2,734</td>
+              </tr>
+            </tbody>
+          </table>
+          <button class="continue">Continue</button>
+        </div>
+
+
+      </div>
+      <p class="num2">2</p>
+      <p class="payment_name">Payment</p><br>
+      <div id="payment2">
+
+        <p>By placing your order, you agree to the Terms & Conditions and Privacy Policy of Borderfree from Pitney
+          Bowes, Nordstrom’s international fulfillment service. Borderfree is an online merchant that is located at 27
+          Waterview Drive, Shelton, CT, 06484, US.</p>
+      </div>
+    </div>
 
 
   </div>
