--- a/checkout.html
+++ b/checkout.html
@@ -104,7 +104,27 @@
           Waterview Drive, Shelton, CT, 06484, US.</p>
       </div>
     </div>
+    <div id="box2">
+      <span class="cart_icon"></span>
+      <h4>Your Order</h4>
+      <a href="payment.html"><button class="continue2">Continue</button></a>
+      <div class="total_amount">
+        <div class="items">
+          <p class="p_items">Items</p>
+          <p class="p_items">shipping</p>
+          <p class="p_items">Duties & Taxes</p>
+          <p class="p_Total">Total</p>
+        </div>
+        <div class="price">
+          <p id="p_items"></p>
+          <p id="p_shipping"></p>
+          <p id="p_taxes"></p>
+          <p id="p_total"></p>
+        </div>
+      </div>
 
+
+    </div>
 
   </div>
 </body>
