--- a/checkout.html
+++ b/checkout.html
@@ -123,7 +123,11 @@
         </div>
       </div>
 
-
+      <form action="" onsubmit="promo_code(event)">
+        <input type="text" id="promo" placeholder="promo code">
+        <input type="submit">
+      </form>
+      <div id="cart"></div>
     </div>
 
   </div>
