--- a/payment.html
+++ b/payment.html
@@ -34,6 +34,23 @@
         <div id="DLv">
             <p class="Delivery"><Span>1 </Span> Delivery (Change)</p><br>
         </div>
+        <div id="box2">
+            <div class="box2_div1">
+                <h5 class="delivery_addresses">Delivery addresses:</h5>
+                <p class="name">Rohit Baghel</p>
+                <P class="street">Nangloi</P>
+                <P class="full_address">Nangloi,Delhi-110041</P>
+                <p class="country">India</p>
+
+            </div>
+            <div class="box2_div2">
+                <h5 class="delivery_method">Delivery Method:</h5>
+                <p class="standard">STANDARD</p>
+                <p class="import">NO ADDITIONAL IMPORT CHARGES</p>
+                <p class="delivery">AT DELIVERY</p>
+                <p class="bussiness_days">11–21 BUSINESS DAYS</p>
+            </div>
+        </div>
 
     </div>
 </body>
