--- a/payment.html
+++ b/payment.html
@@ -51,6 +51,18 @@
                 <p class="bussiness_days">11–21 BUSINESS DAYS</p>
             </div>
         </div>
+        <div id="payment">
+            <p class="payment"><Span>2 </Span> Payment</p>
+
+            <input type="checkbox"> <span>My billing address is the same as my delivery address</span></br>
+            <div id="cardholder">
+                <input type="radio"> <span>Credit or Debit Card</span></br>
+                <input type="number" name="credit" placeholder="Card Number" id="credit"></br>
+                <input type="number" name="expiry" placeholder="MM / YY" id="expiry">
+                <input type="number" name="Security" placeholder="Security Code" id="security">
+
+            </div>
+        </div>
 
     </div>
 </body>
