--- a/payment.html
+++ b/payment.html
@@ -63,7 +63,20 @@
 
             </div>
         </div>
-
+        <div id="last_div">
+            <input type="checkbox"> <span>Send me electronic or mail offers from Borderfree. You may opt out at any
+                time.</span></br>
+            <input type="checkbox"> <span>Send me electronic or mail offers from Nordstrom. You may opt out at any
+                time.</span></br>
+            <button onclick="placeholder()" id="Place_Order">Place Order</button>
+            <p class="receipt">This order total is 100% guaranteed. There will be no additional charges due upon
+                receipt.</p>
+        </div>
+        <div class="description">
+            <p class="description">By placing your order, you agree to the Terms & Conditions and Privacy Policy of
+                Borderfree from Pitney Bowes, Nordstrom’s international fulfillment service. Borderfree is an online
+                merchant that is located at 27 Waterview Drive, Shelton, CT, 06484, US.</p>
+        </div>
     </div>
 </body>
 
